--- a/antora.yml
+++ b/antora.yml
@@ -1,4 +1,4 @@
-name: manuscripts
+name: nla-docs
 title: Niedersächisches Landesarchiv Unterlagen
 url: https://nla.krueckeberg.org
 version: '1.0' 
