--- a/antora.yml
+++ b/antora.yml
@@ -1,5 +1,5 @@
 name: nla-docs
-title: Case Files from Lower Saxony in Bückeberg
+title: Case Files from Lower Saxony Archives in Bückeberg
 url: https://nla.krueckeberg.org
 version: '1.0' 
 # start_page: genealogy::index.adoc
