--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "devDependencies": {
-    "@antora/cli": "3.1.9",
-    "@antora/site-generator": "3.1.9"
+    "@antora/assembler": "^1.0.0-beta.5",
+    "@antora/cli": "3.2.0-alpha.8",
+    "@antora/site-generator": "3.2.0-alpha.8"
   },
   "dependencies": {
-    "@antora/lunr-extension": "^1.0.0-alpha.8",
-    "@antora/pdf-extension": "^1.0.0-alpha.9"
+    "@antora/pdf-extension": "^1.0.0-beta.5"
   }
 }
