--- a/local-playbook.yml
+++ b/local-playbook.yml
@@ -21,7 +21,7 @@ asciidoc:
 antora:
   extensions:
 # Uncomment the pdf extension once 'Download" has been added to th title.
-  - '@antora/pdf-extension'
+# - '@antora/pdf-extension'
   - '@antora/lunr-extension'
 ui:
   bundle:
