--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@antora/site-generator": "3.2.0-alpha.8"
   },
   "dependencies": {
+    "@antora/lunr-extension": "^1.0.0-alpha.10",
     "@antora/pdf-extension": "^1.0.0-beta.5"
   }
 }
